--- a/.github/workflows/generate_epg.yml
+++ b/.github/workflows/generate_epg.yml
@@ -2,7 +2,7 @@ name: Generate EPG-PRO JSON
 
 on:
   schedule:
-    - cron: '0 3 * * *'  # يوميًا الساعة 3 صباحًا UTC
+    - cron: '0 3,15 * * *'  # كل يوم الساعة 3 صباحًا و3 مساءً بتوقيت UTC
   workflow_dispatch:
 
 permissions:
