--- a/.github/workflows/generate_epg.yml
+++ b/.github/workflows/generate_epg.yml
@@ -2,7 +2,7 @@ name: Generate EPG-PRO JSON
 
 on:
   schedule:
-    - cron: '0 3,15 * * *'  # كل يوم الساعة 3 صباحًا و3 مساءً بتوقيت UTC
+    - cron: '0 3 * * *'  # Runs every day at 3 AM UTC
   workflow_dispatch:
 
 permissions:
@@ -54,6 +54,6 @@ jobs:
             github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: 1,  # استبدل برقم مشكلة موجودة
+              issue_number: 1,
               body: 'Failed to generate EPG-PRO JSON. Check workflow logs for details.'
             })
